# density-decomposition-multilayer-graph

./: CMakeLists.txt  README.md  main.cpp
core/: Reorientation.cpp  Reorientation.h
dataset/: split_graph.py
dataset/AUCS/: 0_dense_graph.txt  1_dense_graph.txt  2_dense_graph.txt  3_dense_graph.txt  4_dense_graph.txt  AUCS_inverted_index_output.txt  coauthor.txt  coauthor_density_result.txt  coauthor_newid.csv  dense_subgraph_res.txt  dense_subgraph_res_divandcon.txt  dense_subgraph_res_naive.txt  dense_subgraph_res_space_efficient_include_each_layer_edge.txt  dense_subgraph_res_topdown.txt  facebook.txt  facebook_density_result.txt  facebook_newid.csv  leisure.txt  leisure_density_result.txt  leisure_newid.csv  lunch.txt  lunch_density_result.txt  lunch_newid.csv  mlg.conf  output.csv  process_data.py  trans_txt_2_csv.py  work.txt  work_density_result.txt  work_newid.csv
dataset/homo/: compute_diff.py  dense_subgraph_res_hpdd.txt  dense_subgraph_res_naive.txt  dense_subgraph_res_space_efficient_include_each_layer_edge.txt  dense_subgraph_res_topdown.txt  l0.txt  l0_newid.csv  l1.txt  l1_newid.csv  l2.txt  l2_newid.csv  l3.txt  l3_newid.csv  l4.txt  l4_newid.csv  l5.txt  l5_newid.csv  l6.txt  l6_newid.csv  max_density.txt  mlg.conf  statistics.txt  vtx_map.txt
graph/: Graph.cpp  Graph.h  MultilayerGraph.cpp  MultilayerGraph.h
testing/: DensityDecom.h
utilities/: CoreIndex.h  Defines.h  Log.cpp  MemoryUtils.h  Time.h
